--- a/dashboard/static/css/dashboard/about_me.css
+++ b/dashboard/static/css/dashboard/about_me.css
@@ -19,6 +19,6 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#about-me-first-p {
+#container-left #about-me-2 {
     padding-bottom: 30px;
 }
