--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="{% static '../../../../static/css/dashboard/hobbies.css' %}">
 
 <!-- Main -->
-<div class="container-fluid bg-light">
+<div class="container-fluid bg-light" style="margin-top: 70px;">
   <div class="container">
     <div class="row">
 
