--- a/templates/base.html
+++ b/templates/base.html
@@ -16,26 +16,26 @@
   <!-- Header -->
   <div class="container-fluid">
     <div class="container">
-      <h1 style="font-size: large; font-family: 'Courier New', Courier, monospace; margin-top: 10px;"><b>MAVA MALONGA Alpha<br><span style="color:#ff9c00; ">Développeur Back-end Python & Django</span></b></h1>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 10px;">
+      <nav class="navbar navbar-expand-md fixed-top navbar-light bg-white">
+        <h6 style="font-family: 'Courier New', Courier, monospace;"><b>MAVA MALONGA Alpha<br><span style="color:#ff9c00; ">Développeur Back-end Python & Django</span></b></h6>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item active">
                 <a href="{% url 'index' %}" class="nav-item nav-link active" style="font-weight:bold;">Acceuil</a>
             </li>
             <li class="nav-item">
                 <a href="{% url 'projects' %}" class="nav-item nav-link" style="font-weight:bold;">Réalisations</a>
             </li>
+            {% if page_name == 'dashboard' %}
+            <li class="nav item">
+              <a href="{{ cv.pdf.url }}" class="nav-item nav-link" style="font-weight:bold;">Curriculum vitae</a>
+            </li>
+            {% endif %}
           </ul>
-          {% if page_name == 'dashboard' %}
-          <div class="navbar-nav ms-auto">
-            <a href="{{ cv.pdf.url }}" class="nav-item nav-link" style="font-weight:bold;">Curriculum vitae</a>
-          </div>
-          {% endif %}
         </div>
       </nav>
     </div>
@@ -44,8 +44,10 @@
 
   
   <!-- Main block -->
+  <body class="bg-light">
   {% block content %} {% endblock %}
   <!-- End Main block -->
+  </body>
 
   <!-- Footer -->
   <footer class="text-center text-lg-start bg-light text-muted">
